# fastLibraryDesign

./: CMakeLists.txt  constants.h  fasta.h  library.h  main.cpp  stem.h
